# LSV

./: .clang-format  HW4.aux  HW4.tex  LSV_hw2.odt  a.out  main.cpp  test
project/autoBalsa_not_abc/: AutoBalsa.cpp  AutoBalsa.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
project/autoBalsa_not_abc/LGSynth91/slif/fsmexamples/sim/: daio.sim
project/autoBalsa_not_abc/LGSynth91/slif/mlexamples/sim/: 9symml.sim  C1355.sim  C17.sim  C1908.sim  C2670.sim  C3540.sim  C432.sim  C499.sim  C5315.sim  C6288.sim  C7552.sim  C880.sim  alu2.sim  alu4.sim  apex6.sim  apex7.sim  b1.sim  b9.sim  c8.sim  cc.sim  cht.sim  cm138a.sim  cm150a.sim  cm151a.sim  cm152a.sim  cm163a.sim  cm42a.sim  count.sim  cu.sim  decod.sim  des.sim  example2.sim  f51m.sim  frg1.sim  frg2.sim  k2.sim  lal.sim  ldd.sim  majority.sim  mux.sim  (+16 more)
project/autoBalsa_not_abc/LGSynth91/slif/twolexamples/sim/: 5xp1.sim  9sym.sim  alu4.sim  apex1.sim  apex2.sim  apex3.sim  apex4.sim  apex5.sim  bw.sim  clip.sim  con1.sim  duke2.sim  e64.sim  misex1.sim  misex2.sim  misex3.sim  misex3c.sim  o64.sim  rd53.sim  rd73.sim  rd84.sim  sao2.sim  seq.sim  vg2.sim  xor5.sim
project/autoBalsa_not_abc/pa2/: .clang-format  CMakeCache.txt  script  sol.txt
project/autoBalsa_not_abc/pa2/src/lsv/: lsvMajFind.cpp
project/autoBalsa_not_abc/src/: main.cpp
project/balsa-tech-example-4.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  balsa-tech-example  configure  configure.ac  mkinstalldirs
project/balsa-tech-example-4.0/example/: Makefile.in
project/balsa-tech-xilinx-4.0/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  balsa-tech-xilinx  configure  configure.ac  mkinstalldirs
project/balsa-tech-xilinx-4.0/xilinx/: Makefile.in
(+1062 files in other folders)
